# fragaria

./: .gitignore  LICENSE  README.md  pyproject.toml
fargaria/: build.sh  config.yaml  main.py
fargaria/frontend/: package-lock.json  package.json
fargaria/frontend/public/: index.html
fargaria/frontend/src/: App.svelte
