[tool.poetry]
name = "fargaria"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.45.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
